syntax = "proto3";

package edible.inventory.request;

option go_package = "./;eipb";

// The request schema for calling Recycle on inventory.
message InventoryRecycleRequest {
    bool recycle_finished = 1;
    bool recycle_expired  = 2;
}

// The request schema for calling Use on inventory.
message InventoryUseRequest {
    uint32 food_id = 1;
}

// The request schema for calling Buy on inventory.
message InventoryBuyRequest {
    uint32 amount     = 1;
    int64  expires_at = 2;
}
